# Quidditch-zigzag

runtime/runtime/src/Quidditch/: CMakeLists.txt
runtime/runtime/src/Quidditch/janky_dispatch/: CMakeLists.txt  janky_dispatch.c  janky_dispatch.h
runtime/runtime/src/Quidditch/zigzag_dispatch/: CMakeLists.txt  dispatch-notes.c  zigzag_dispatch-broken-wfi.c  zigzag_dispatch-broken-wfi.h  zigzag_dispatch.c  zigzag_dispatch.h
runtime/samples/: CMakeLists.txt
runtime/tests/: .gitignore  CMakeLists.txt  clean-out.sh  compile-all-mlir-tests-for-riscv.sh  compile-for-riscv.sh  compile-for-riscv2.sh  mlir-help.txt  regression-tests.sh  run-w-riscv.sh  run-w-x86-old.sh  run-w-x86.sh  spike-build-and-run-verbose.sh  spike-build-and-run.sh  spike-link-and-run.sh  test-for-loop-degradation-mlir-opt.sh  test-for-loop-degradation.sh  tiled-matmul.c  was-it-all-worth-it.sh  zigzag-build-and-run.sh  zigzag-spike-build-and-run.sh  zigzag-verilator-build-and-run.sh
runtime/tests/correct/: tiledMatmul12.txt
runtime/tests/hola-world/: clean_out.sh  data.c  main.c  matmul-tiled.mlir
runtime/tests/holaWorld/: README.md  holaWorld.mlir  main-no-snrt.c  main.c
runtime/tests/lib-zigzag/: data.c  gendata.py  hello_world.c  memory.c  memref.h  memrefCopy.ll  zigzag_utils.c  zigzag_utils.h
runtime/tests/matmul/: README.md  data.h  main-no-snrt.c  main.c  matmul.mlir
runtime/tests/notes-delete-later/: run-w-x86-bacckup-1.sh  run-w-x86-bacckup-2.sh
runtime/tests/tiled-matmul-2x16/: main-no-snrt.c  matmul-tiled.mlir
runtime/tests/tiledMatmul/: README.md  main.c  matmul-smaller.mlir
runtime/tests/tiledMatmul10/: README.md  main.c  tiledMatmul10.mlir
runtime/tests/tiledMatmul10/out-ex/: tiledMatmul10-in-llvm-dialect.mlir
runtime/tests/tiledMatmul11/: README.md  main-old.c  main.c  notes.txt  tiledMatmul11.mlir
runtime/tests/tiledMatmul111/: README.md  main-no-snrt.c  snax-adapted-script copy.sh  snax-adapted-script.sh  tiledMatmul111.mlir
runtime/tests/tiledMatmul12/: README.md  main.c  tiledMatmul12-hoodle.mlir  tiledMatmul12.mlir
runtime/tests/tiledMatmul12/out-ex/: tiledMatmul10-bufferized.mlir  tiledMatmul10.ll
runtime/tests/tiledMatmul13/: README.md  main.c  tiledMatmul13.mlir
runtime/tests/tiledMatmul15/: README.md  main.c  tiledMatmul15.mlir
runtime/tests/tiledMatmul2/: README.md  main.c  tiledMatmul2.mlir  zigzag-output.txt
runtime/tests/tiledMatmul3/: README.md  main.c  tiledMatmul3-generic.mlir  tiledMatmul3.mlir  zigzag-input.mlir
runtime/tests/tiledMatmul4/: README.md  main.c  tiledMatmul4.mlir
runtime/tests/tiledMatmul5/: README.md  main.c  snax_gemm.py  tiledMatmul5.mlir
runtime/tests/tiledMatmul6/: README.md  main.c  tiledMatmul6.mlir
runtime/tests/tiledMatmul7/: README.md  main-w-spins.c  main.c  reference.c  tiledMatmul-broken-somehow.mlir  tiledMatmul7.mlir
runtime/tests/tiledMatmul8/: README.md  main.c  old-main.c  tiledMatmul8DUMP.txt
runtime/tests/tiledMatmul9/: README.md  main-no-snrt.c  main.c  tiledMatmul9.mlir
zigzag-fork/: README.md  setup.sh
zigzag-fork/other-examples/: nsnet-iree-kernel-FIXED.md  nsnet-iree-kernel.md
